Fix the exercises in Chapter 1.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@72169 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -9,6 +9,8 @@
 
 % http://creativecommons.org/licenses/by-sa/3.0/
 
+% TODO: Exercises in Chapter 1
+
 %\documentclass[10pt,b5paper]{book}
 \documentclass[10pt]{book}
 \usepackage[width=5.0in,height=7.50in,hmarginratio=3:2,vmarginratio=1:1]{geometry}
@@ -1306,6 +1308,143 @@ a program, analogous to a word in a natural language.
 
 \section{Exercises}
 
+
+\begin{ex}
+What is the function of the secondary memory in a computer?
+
+a) Execute all of the computation and logic of the program\\
+b) Retrieve web pages over the Internet\\
+c) Store information for the long term - even beyond a power cycle\\
+d) Take input from the user 
+\end{ex}
+
+\begin{ex}
+What is a program?
+\end{ex}
+
+\begin{ex}
+What is is the difference between a compiler and an interpreter?
+\end{ex}
+
+\begin{ex}
+Which of the following contains "machine code"?
+
+a) The Python interpreter\\
+b) The keyboard\\
+c) Python source file\\
+d) A word processing document
+\end{ex}
+
+\begin{ex}
+Looking at the following Python code
+
+\beforeverb
+\begin{verbatim}
+for i in range(10):
+    print "Howdy"
+    print "Bob"
+    if i < 10 : 
+        print "Zap"
+\end{verbatim}
+\afterverb
+%
+Which of the following types of program steps is *not* in the above code sequence?
+
+a) Sequential\\
+b) Conditional\\
+c) Repetitive\\
+d) Store and reuse
+\end{ex}
+
+\begin{ex}
+Which of the above print lines will be conditionally executed?
+
+a) Howdy\\
+b) Bob\\
+c) Zap\\
+d) for
+\end{ex}
+
+\begin{ex}
+What is the purpose of the "def" keyword in Python?
+
+a) It is slang that means "the following code is really cool"\\
+b) It indicates the start of a function\\
+c) It indicates that the following indented section of code is to be stored for later\\
+d) b and c are both true\\
+e) None of the above
+\end{ex}
+
+\begin{ex}
+What will the following Python program print out?
+
+\beforeverb
+\begin{verbatim}
+def fred():
+   print "Zap"
+
+def jane():
+   print "ABC"
+
+jane()
+fred()
+jane()
+\end{verbatim}
+\afterverb
+%
+a) Zap ABC jane fred jane\\
+b) Zap ABC Zap\\
+c) ABC Zap jane\\
+d) ABC Zap ABC\\
+e) Zap Zap Zap
+\end{ex}
+
+\begin{ex}
+Where in the computer is a variable such as "X" stored 
+after the following Python line finishes?
+
+\beforeverb
+\begin{verbatim}
+x = 123
+\end{verbatim}
+\afterverb
+%
+a) Central processing unit\\
+b) Main Memory\\
+c) Secondary Memory\\
+d) Input Devices\\
+e) Output Devices
+\end{ex}
+
+\begin{ex}
+What will the following program print out:
+
+\beforeverb
+\begin{verbatim}
+x = 43
+x = x + 1
+print x
+\end{verbatim}
+\afterverb
+%
+a) 43\\
+b) 44\\
+c) x + 1\\
+d) Error because x = x + 1 is not possible mathematically
+\end{ex}
+
+\begin{ex}
+Explain each of the following using an example of a human capability: 
+(1) Central processing unit, (2) Main Memory, (3) Secondary Memory, 
+(4) Input Device, and
+(5) Output Device.
+For example, "What is the human equivalent to a Central Processing Unit"? 
+\end{ex}
+
+\begin{ex}
+How do you fix a "Syntax Error"?
+\end{ex}
+
 \begin{ex}
 Use a web browser to go to the Python Website \url{python.org}.
 This page contains information about Python and links
@@ -1321,6 +1460,7 @@ but it is good to know where it is.
 \index{python.org}
 \end{ex}
 
+
 \begin{ex}
 Start the Python interpreter and type {\tt help()} to start the online
 help utility.  Or you can type \verb"help('print')" to get information
@@ -1334,22 +1474,8 @@ version of Python.
 \index{help utility}
 \end{ex}
 
-\begin{ex}
-Start the Python interpreter and use it as a calculator.
-Python's syntax for math operations is almost the same as
-standard mathematical notation.  For example, the symbols
-{\tt +}, {\tt -} and {\tt /} denote addition, subtraction
-and division, as you would expect.  The symbol for
-multiplication is {\tt *}.
 
-If you run a 10 kilometer race in 43 minutes 30 seconds, what is your
-average time per mile?  What is your average speed in miles per hour?
-(Hint: there are 1.61 kilometers in a mile).
 
-\index{calculator}
-\index{running pace}
-
-\end{ex}
 
 \chapter{Variables, expressions and statements}
 
